<resources>
    <string name="app_name">Artefact Tracker App</string>
    //main menu
    <string name="main_menu_database_button">Database Options</string>
    <string name="main_menu_material_names_button">Material Options</string>
    <string name="main_menu_inventory_button">Inventory Management</string>
    <string name="main_menu_collection_button">Collection Logs</string>
    <string name="main_menu_level_data_button">Level Information</string>
    <string name="main_menu_analyse_button">Show Requirements</string>
    <string name="main_menu_unique_remaining_label">Unique collections remaining:</string>
    <string name="main_menu_available_label">Collections available:</string>
    <string name="main_menu_material_db">Materials in Database:</string>
    <string name="main_menu_artefact_db">Owned Artefacts:</string>
    <string name="main_menu_material_requirement">Materials for owned Artefacts:</string>
    //material options
    <string name="material_opt_search_hint">Search Materials</string>
    <string name="material_opt_name_hint">Enter a name</string>
    <string name="material_opt_label_placeholder">Select a Material...</string>
    //inventory management
    <string name="inventory_menu_search_hint">Search Artefacts</string>
    <string name="inventory_menu_category_label">Filter Category:</string>
    //add artefact
    <string name="add_artefact_title">Add an Artefact</string>
    <string name="add_artefact_name_hint">Enter a name</string>
    <string name="add_artefact_category_label">Category:</string>
    <string name="add_artefact_add_requirement">Add a requirement</string>
    //collection logs
    <string name="collection_logs_collectors_button">Collectors</string>
    <string name="collection_logs_collections_button">Collections</string>
    <string name="collection_logs_collectible_button">Collectible Rewards</string>
    <string name="collection_log_pylon_label">Pylon batteries available:</string>
    <string name="collection_log_glass_label">Robust class available:</string>
    <string name="collection_log_blueprint_label">Blueprint fragments available:</string>
    //generic
    <string name="default_zero">0</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    //place holder strings
    <string name="place_holder_title">%1$s:</string>
    <string name="place_holder_quantity">%1$d</string>
    <string name="place_holder_quantity_as_string">%1$s</string>
    //hint texts
    <string name="search_collector_hint">Search Collectors</string>
    <string name="create_collector_name_hint">Enter a name</string>
    <string name="create_collector_location_hint">Enter a location</string>
    <string name="search_collection_hint">Search Collections</string>
    <string name="create_collection_holder_name_hint">Enter a name</string>
    <string name="create_collection_holder_collector_label">Collector:</string>
    <string name="create_collection_holder_reward_label">Reward:</string>
    <string name="create_collection_holder_reward_qty_label">Reward quantity</string>
    //arrays
    <string-array name="artefact_categories">
        <item>All</item>
        <item>Armadyl</item>
        <item>Bandos</item>
        <item>Saradomin</item>
        <item>Zamorak</item>
        <item>Zaros</item>
    </string-array>
    <string-array name="collection_rewards">
        <item>Any</item>
        <item>Cronotes</item>
        <item>Pylon batteries</item>
        <item>Robust glass</item>
        <item>Tetra pieces</item>
        <item>Stormguard blueprint fragments</item>
    </string-array>
    <string-array name="level_order">
        <item>Level Asc</item>
        <item>Level Desc</item>
        <item>Rubble Asc</item>
        <item>Rubble Desc</item>
        <item>Site Asc</item>
        <item>Site Desc</item>
    </string-array>
    <string-array name="order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="runescape_artefact_tracker_mobile_app_data">RUNESCAPE_ARTEFACT_TRACKER_MOBILE_APP_DATA</string>
    <string name="runescape_artefact_tracker_database_option_data">RUNESCAPE_ARTEFACT_TRACKER_DATABASE_OPTION_DATA</string>
</resources>
